--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.20",
+    "commit": "^0.0.4",
     "core-js": "^2.6.5",
+    "git": "^0.1.5",
+    "loader": "^2.1.1",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
